Bug 970904 - Fix PR_WaitCondVar timeout for sleep() in js shell. r=jandem